# reserde

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: audit_at_midnight.yml  ci.yml  rust_auto_format.yml
src/: main.rs
tests/: meta_constants_.rs  meta_readme.rs  meta_version_numbers.rs
