[package]
name = "reserde"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Serde-based CLI document converter (Bencode, CBOR, JSON, TAML, x-www-form-urlencoded etc.)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Tamschi/reserde"
homepage = "https://github.com/Tamschi/reserde/tree/v0.0.1"
documentation = "https://docs.rs/reserde/0.0.1"
keywords = ["Serde", "cli", "converter"]
categories = ["command-line-utilities", "converters"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/reserde" }
is-it-maintained-open-issues = { repository = "Tamschi/reserde" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
default = ["enum-bools", "stringify", "de-bencode", "ser-bencode", "ser-bincode", "de-cbor", "ser-cbor", "de-json", "ser-json", "de-taml", "de-urlencoded", "ser-urlencoded", "de-xml", "ser-xml", "de-yaml", "ser-yaml"]
enum-bools = []
stringify = []
de-bencode = ["serde_bencode"]
ser-bencode = ["serde_bencode"]
ser-bincode = ["bincode"]
de-cbor = ["serde_cbor"]
ser-cbor = ["serde_cbor"]
de-json = ["serde_json"]
ser-json = ["serde_json"]
de-taml = ["serde_taml"]
de-urlencoded = ["serde_urlencoded"]
ser-urlencoded = ["serde_urlencoded"]
de-xml = ["quick-xml"]
ser-xml = ["quick-xml"]
de-yaml = ["serde_yaml"]
ser-yaml = ["serde_yaml"]

[dependencies]
argh = "0.1.3"
bincode = { version = "1.3.1", optional = true }
quick-xml = { version = "0.18.1", optional = true, features = ["serialize"] }
serde = "1.0.114"
serde_bencode = { version = "0.2.2", optional = true }
serde_cbor = { version = "0.11.1", optional = true }
serde_json = { version = "1.0.57", optional = true } #TODO: Check out features.
serde_taml = { version = "0.0.1", optional = true, features = ["serde-object-assist"] }
serde_urlencoded = { version = "0.6.1", optional = true }
serde_yaml = { version = "0.8.13", optional = true }
serde-object = "0.0.0-alpha.0"
serde-detach = "0.0.1"
strum = { version = "0.19.1", features = ["derive"] }
wyz = "0.2.0"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.24"
