[package]
name = "reserde"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Serde-based CLI document converter (Bencode, CBOR, JSON, TAML, x-www-form-urlencoded etc.)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Tamschi/reserde"
homepage = "https://github.com/Tamschi/reserde/tree/v0.0.2"
documentation = "https://docs.rs/reserde/0.0.2"
keywords = ["Serde", "cli", "converter"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/reserde" }
is-it-maintained-open-issues = { repository = "Tamschi/reserde" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
argh = "0.1.6"
bincode = "1.3.1"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = "1.0.130"
serde_bencode = "0.2.2"
serde_json = "1.0.68" #TODO: Check out features.
serde_taml = { version = "0.0.3", features = ["serde-object-assist"] }
serde_urlencoded = "0.7.0"
serde_yaml = "0.8.21"
serde-object = "0.0.0-alpha.0"
serde-detach = "0.0.1"
strum = { version = "0.21.0", features = ["derive"] }
tap = "1.0.1"
ciborium = "0.1.0"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.3"

[build-dependencies]
syn = "1.0.80" # Workaround for strum minimum dependency version bug.
